force-app/main/default/objects/Account_Ledger__c/Account_Ledger__c.object-meta.xml
<CustomObject>
    <label>Account Ledger</label>
    <nameField>
        <label>Account Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>