force-app/main/default/objects/Account_Ledger__c/fields/Amount_Deducted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Deducted__c</fullName>
    <label>Amount Deducted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>