force-app/main/default/objects/Account_Ledger__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <label>Booking Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>