force-app/main/default/objects/Account_Ledger__c/fields/Refund_amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_amount__c</fullName>
    <label>Refund amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>